[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/menu/StartScene.gd" type="Script" id=1]
[ext_resource path="res://Scenes/menu/sky2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/menu/cloudPool/CloudPool.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/menu/sushi-sama.png" type="Texture" id=4]
[ext_resource path="res://Scenes/menu/sushi-front.png" type="Texture" id=5]
[ext_resource path="res://Scenes/menu/hand.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Main/GamjaFlower-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scenes/menu/backdrop.png" type="Texture" id=8]
[ext_resource path="res://Scenes/menu/exit-button.png" type="Texture" id=9]
[ext_resource path="res://Scenes/menu/exit-button-pressed.png" type="Texture" id=10]
[ext_resource path="res://Scenes/menu/music-button.png" type="Texture" id=11]
[ext_resource path="res://Scenes/menu/music-button-pressed.png" type="Texture" id=12]
[ext_resource path="res://Scenes/menu/sound-effects-button.png" type="Texture" id=13]
[ext_resource path="res://Scenes/menu/sound-effects-button-pressed.png" type="Texture" id=14]
[ext_resource path="res://sound/menu-button.wav" type="AudioStream" id=15]
[ext_resource path="res://Scenes/menu/settings-button.png" type="Texture" id=16]
[ext_resource path="res://Scenes/menu/settings-button-pressed.png" type="Texture" id=17]
[ext_resource path="res://Scenes/menu/play.png" type="Texture" id=18]
[ext_resource path="res://Scenes/menu/play-pressed.png" type="Texture" id=19]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 0.5, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.509804, 1, 1, 1, 0.509804 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 410, 10 )

[sub_resource type="DynamicFont" id=4]

size = 40
use_mipmaps = false
use_filter = true
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 40
use_mipmaps = false
use_filter = true
font_data = ExtResource( 7 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="StartScene" type="Node2D" index="0"]

scale = Vector2( 0.75, 0.75 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_horizontal_guides_": [ 440.0, 180.0 ],
"_edit_vertical_guides_": [ 400.0, -110.0, 600.0, 460.0 ]
}

[node name="sky2" type="Sprite" parent="." index="0"]

position = Vector2( 400, 240 )
scale = Vector2( 8.2, 5.3 )
texture = ExtResource( 2 )

[node name="CloudPool" parent="." index="1" instance=ExtResource( 3 )]

_sections_unfolded = [ "Transform" ]

[node name="sushi-sama" type="Sprite" parent="." index="2"]

position = Vector2( 400, 60 )
scale = Vector2( 0.125577, 0.125577 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sushi" type="KinematicBody2D" parent="." index="3"]

pause_mode = 2
position = Vector2( -120, 360 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Offset", "Pause", "Transform" ]

[node name="Tail" type="Line2D" parent="Sushi" index="0"]

points = PoolVector2Array(  )
width = 150.0
default_color = Color( 0.4, 0.5, 1, 1 )
gradient = SubResource( 1 )
texture_mode = 43629664
sharp_limit = 2.0
round_precision = 8
_sections_unfolded = [ "Border", "Capping", "Fill", "Material", "Transform", "Visibility", "Z Index" ]

[node name="Sprite" type="Sprite" parent="Sushi" index="1"]

scale = Vector2( 0.0882489, 0.0882489 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="ArmLeftLine2D" type="Line2D" parent="Sushi" index="2"]

points = PoolVector2Array(  )
width = 10.0
default_color = Color( 0.145098, 0.203922, 0.168627, 1 )
texture_mode = 43629664
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 2.0
round_precision = 13
_sections_unfolded = [ "Border", "Capping", "Fill", "Transform", "Z Index" ]

[node name="ArmRightLine2D" type="Line2D" parent="Sushi" index="3"]

points = PoolVector2Array(  )
width = 10.0
default_color = Color( 0.145098, 0.203922, 0.168627, 1 )
texture_mode = 43629664
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 2.0
round_precision = 8
_sections_unfolded = [ "Capping", "Fill", "Transform", "Z Index" ]

[node name="HandLeft" type="Sprite" parent="Sushi" index="4"]

position = Vector2( -82.545, -191.324 )
scale = Vector2( -0.165, 0.165 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="HandRight" type="Sprite" parent="Sushi" index="5"]

position = Vector2( 75.3228, -194.525 )
scale = Vector2( 0.165, 0.165 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sushi" index="6"]

shape = SubResource( 2 )
disabled = true

[node name="CloudSensor" type="Area2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 280, 510 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CloudSensor" index="0"]

position = Vector2( 120, -530 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="SushiMoveTween" type="Tween" parent="." index="5"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="." index="6"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 0.75, 0.75 )
transform = Transform2D( 0.75, 0, 0, 0.75, 0, 0 )

[node name="YourHighScoreText" type="Label" parent="CanvasLayer" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 113.0
margin_top = -33.0
margin_right = 519.0
margin_bottom = 28.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.145098, 0.203922, 0.168627, 1 )
text = "High Score: 0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants" ]

[node name="AllTimeHighScoreText" type="Label" parent="CanvasLayer" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 447.0
margin_top = 133.0
margin_right = 782.0
margin_bottom = 174.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.141176, 0.203922, 0.164706, 1 )
text = "All Time High Score: 0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "custom_colors", "custom_fonts" ]

[node name="SettingsPanel" type="Sprite" parent="CanvasLayer" index="2"]

editor/display_folded = true
visible = false
position = Vector2( 590, 290 )
z_index = 2
texture = ExtResource( 8 )
_sections_unfolded = [ "Material", "Z Index" ]

[node name="ExitButton" type="TextureButton" parent="CanvasLayer/SettingsPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = -150.0
margin_right = 284.0
margin_bottom = 214.0
rect_scale = Vector2( 0.2, 0.15 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="MusicButton" type="TextureButton" parent="CanvasLayer/SettingsPanel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -100.0
margin_top = -90.0
margin_right = 306.0
margin_bottom = 92.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="SoundEffectsButton" type="TextureButton" parent="CanvasLayer/SettingsPanel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -100.0
margin_top = 20.0
margin_right = 306.0
margin_bottom = 202.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="MusicTouchScreenButton" type="TouchScreenButton" parent="CanvasLayer/SettingsPanel" index="3"]

position = Vector2( -100, -90 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 11 )
pressed = ExtResource( 12 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 1
_sections_unfolded = [ "Transform" ]

[node name="SoundEffectsTouchScreenButton" type="TouchScreenButton" parent="CanvasLayer/SettingsPanel" index="4"]

position = Vector2( -100, 20 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 13 )
pressed = ExtResource( 14 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 1
_sections_unfolded = [ "Transform" ]

[node name="ExitTouchScreenButton" type="TouchScreenButton" parent="CanvasLayer/SettingsPanel" index="5"]

position = Vector2( 120, -150 )
scale = Vector2( 0.2, 0.15 )
normal = ExtResource( 9 )
pressed = ExtResource( 10 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 1
_sections_unfolded = [ "Transform" ]

[node name="MenuButtonAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="7"]

stream = ExtResource( 15 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Visibility" ]

[node name="StartGameButtonAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="8"]

stream = ExtResource( 15 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="AmbientAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="9"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Buttons" type="Node2D" parent="." index="10"]

[node name="SettingsButton" type="TextureButton" parent="Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 710.0
margin_top = 400.0
margin_right = 1039.0
margin_bottom = 753.0
rect_scale = Vector2( 0.15, 0.15 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="SettingsTouchScreenButton" type="TouchScreenButton" parent="Buttons/SettingsButton" index="0"]

normal = ExtResource( 16 )
pressed = ExtResource( 17 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 1
_sections_unfolded = [ "Transform" ]

[node name="PlayButton" type="TextureButton" parent="Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 530.0
margin_top = 270.0
margin_right = 831.0
margin_bottom = 508.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Textures", "Theme", "Visibility" ]

[node name="PlayTouchScreenButton" type="TouchScreenButton" parent="Buttons/PlayButton" index="0"]

normal = ExtResource( 18 )
pressed = ExtResource( 19 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 1
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="StartGameTimer" type="Timer" parent="." index="11"]

process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false

[connection signal="body_exited" from="CloudSensor" to="." method="_on_CloudSensor_body_exited"]

[connection signal="tween_completed" from="SushiMoveTween" to="." method="_on_SushiMoveTween_tween_completed"]

[connection signal="button_up" from="CanvasLayer/SettingsPanel/ExitButton" to="." method="_on_ExitButton_button_up"]

[connection signal="button_up" from="CanvasLayer/SettingsPanel/MusicButton" to="." method="_on_MusicButton_button_up"]

[connection signal="button_up" from="CanvasLayer/SettingsPanel/SoundEffectsButton" to="." method="_on_SoundEffectsButton_button_up"]

[connection signal="released" from="CanvasLayer/SettingsPanel/MusicTouchScreenButton" to="." method="_on_MusicButton_button_up"]

[connection signal="released" from="CanvasLayer/SettingsPanel/SoundEffectsTouchScreenButton" to="." method="_on_SoundEffectsButton_button_up"]

[connection signal="released" from="CanvasLayer/SettingsPanel/ExitTouchScreenButton" to="." method="_on_ExitButton_button_up"]

[connection signal="button_up" from="Buttons/SettingsButton" to="." method="_on_SettingsButton_button_up"]

[connection signal="released" from="Buttons/SettingsButton/SettingsTouchScreenButton" to="." method="_on_SettingsButton_button_up"]

[connection signal="button_up" from="Buttons/PlayButton" to="." method="_on_PlayButton_button_up"]

[connection signal="released" from="Buttons/PlayButton/PlayTouchScreenButton" to="." method="_on_PlayButton_button_up"]

[connection signal="timeout" from="StartGameTimer" to="." method="_on_StartGameTimer_timeout"]


